public/stylesheet.css
/* VARIABLES */
:root {
    --link: rgba(0, 114, 63, 1);
    --green: rgba(0, 229, 127, 1);
    --spacing-s: 20px;
    --spacing-m: calc(var(--spacing-s) * 1.25);
    --spacing-l: calc(var(--spacing-s) * 2);
}

@font-face {
    font-family: "CircularStd-Medium";
    src: url('./fonts/CircularStd-Medium.woff') format('woff'),
    url('./fonts/CircularStd-Medium.woff2') format('woff2');
}

@font-face {
    font-family: "SFMono-Light";
    src: url('./fonts/SFMono-Light.woff') format('woff'),
    url('./fonts/SFMono-Light.woff2') format('woff2');
}

@font-face {
    font-family: "SFMono-Medium";
    src: url('./fonts/SFMono-Medium.woff') format('woff'),
    url('./fonts/SFMono-Medium.woff2') format('woff2');
}

@font-face {
    font-family: "Terminal-Grotesque";
    src: url('./fonts/Terminal-Grotesque.woff') format('woff'),
    url('./fonts/Terminal-Grotesque.woff2') format('woff2');
}

/* GENERAL */
body {
    margin: 0;
    padding: 0 30px 30px 30px;
    font-family: "SFMono-Light", monospace;
    font-size: 16px;
    line-height: 1.25em;
    font-weight: 100;
    color: var(--green);
    overflow-x: auto;
}

a, a:visited, a:active {
    color: var(--green);
    text-decoration: none;
}

a:hover {
    color: black;
}

tr:hover a strong {
    color: white;
}

::-moz-selection {
    background-color: rgba(0, 0, 0, 0.6);
    color: var(--green);
}

::selection {
    background-color: rgba(0, 0, 0, 1);
    color: var(--green);
}

img {
    max-width: 100%;
    min-width: 100%;
}

/* TOP BAR PART */
nav {
    position: fixed;
    padding: var(--spacing-s);
    top: 0;
    text-align: left;
    text-transform: uppercase;
    z-index: 999;
}

nav a, nav a:active, nav a:hover {
    color: var(--green);
    text-decoration: none;
}

nav h1, .fakeNav h1 {
    font-family: "CircularStd-Medium", sans-serif;
    font-size: 4em;
    line-height: 1em;

    color: var(--green);

    margin: 0;

    word-spacing: 10px;

    -webkit-text-fill-color: var(--green);
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: white;

    transition: font-size 0.2s ease-in;
}

.smallHheading {
    font-size: 2.5em !important;
}

nav h1 span, .fakeNav h1 span {
    font-family: "Terminal-Grotesque", sans-serif;
    font-size: 1.125em;
}

.fakeNav {
    padding: var(--spacing-s);
    opacity: 0;
    z-index: 0;
}

/* INDEX PAGE CSS */
.about {
    margin: 0 0 var(--spacing-l) 0;
    padding: var(--spacing-s);

    font-weight: 200;

    color: white;
    background-color: var(--green);
}

.about strong {
    font-family:"SFMono-Medium", monospace;
}

.about a:visited {
    color: white;
}

.about a strong, .about a {
    color: white;
}

.about a:hover {
    color: white;
}

.about > p:nth-of-type(even) {
    margin: var(--spacing-s) 0;
}

.about > p:last-of-type {
    margin: var(--spacing-s) 0 0 0;
}

table {
    width: 100%;
    vertical-align: top;
}

tr {
    display: flex;
}

body > table > tbody > tr {
    height: auto;
    display: flex;
    overflow: hidden;
    border-bottom: 1px solid var(--green);
    transition: height 0.1s linear, opacity 0.5s linear;
    opacity: 1;
}

body > table > tbody > tr tbody tr:nth-of-type(2) {
    max-height: 0;
    transition: max-height 0.1s linear;
}

body > table > tbody > tr:not(#header):hover {
    height: auto;
    background-color: var(--green);
    color: white;
    cursor: pointer;
}

body > table > tbody > tr:not(#header):hover tbody tr:nth-of-type(2) {
    max-height: 1.5em;
}

tr:not(#header):hover a {
    color: white;
}

td, th {
    flex: 1;
    padding: var(--spacing-s);
}

th {
    font-family: "CircularStd-Medium", sans-serif;
    /*font-weight: 400;*/
}

.hideContent td {
    padding: 0 var(--spacing-s) var(--spacing-s) var(--spacing-s);
}

body > table > tbody > tr > td {
    padding: 0;
    font-weight: normal;
    vertical-align: top;
    width: 100%;
}

table table td.hideContent {
    padding: var(--spacing-s) 0 0 0;
}

.autoHeight tbody tr:nth-of-type(2) {
    max-height: 50em !important;
}

.tag  {
    opacity: 1;
    transition: opacity 0.5s linear;
}

.tag:hover {
    text-decoration: underline;
}

.activeTag {
    padding: 2px 4px;
    color: white;
    background-color: var(--green);
    border-radius: 2px;
}

tr:hover .activeTag {
    color: var(--green);
    background-color: white;
}

/* README PAGE CSS */
#cover {
    position: relative;
    display: block;
    width: 100vw;
    left: -30px;
    margin: 0 !important;
}

#cover img {
    width: 100vw;
    max-width: 100vw !important;
    height: auto;
    margin: 0 !important;
}

#tableOfContentsLeft {
    position: sticky;

    width: calc(33.2% - var(--spacing-s));
    height: auto;
    max-height: 100vh;

    padding: var(--spacing-l) var(--spacing-s);

    top: 2em;
    float: left;
    overflow-y: scroll;
}

#tableOfContentsLeft h3 {
    font-family: "CircularStd-Medium", sans-serif;
    font-size: 1.25em;
    margin-right: 0;
}

#tableOfContentsLeft > ol {
    padding: 0 0 0 var(--spacing-l);
}

#tableOfContentsLeft li ol, #tableOfContentsLeft li ul {
    padding: 0 0 0 var(--spacing-s);
}

#tableOfContentsLeft li p {
    margin: 0;
}

#content a {
    color: var(--link);
    text-decoration: underline;
}

#content {
    display: block;
    margin: 0 0 0 33.2%;
    width: 66.7%;
}

#content tr:hover a {
    color: var(--link);
}

#content a:hover, #content table a:hover, #content tr a:hover {
    color: black;
}

#content > p {
    margin: var(--spacing-s) 0;
}

#content em {
    font-style: normal;
}

#content h1 {
    font-family: "CircularStd-Medium", sans-serif;
    font-size: 4.5em;
    margin: var(--spacing-l) 0;
}

#content h2 {
    font-family: "CircularStd-Medium", sans-serif;
    font-size: 2.5em;
    margin: var(--spacing-l) 0;
}

#content h3 {
    font-family: "CircularStd-Medium", sans-serif;
    margin: var(--spacing-s) 0;
}

#content h3#metadata {
    font-family: "CircularStd-Medium", sans-serif;
    font-size: 2.5em;
    margin: var(--spacing-l) 0;
}

#content h4 {
    font-family: "CircularStd-Medium", sans-serif;
    margin: var(--spacing-s) 0;
}

#content th {
    font-family:"SFMono-Medium", monospace;
    font-size: 1.25em;
}

#content > table thead {
    border-bottom: 1px solid var(--green);
}

#content > table tr:nth-of-type(even) {
    border-top: 1px solid var(--green);
    border-bottom: 1px solid var(--green);
}

#content > table tr:last-of-type {
    border: none;
}

#content img {
    max-width: 100% !important;
    min-width: auto;
    max-height: 90vh !important;
    width: auto;
    height: auto;
    display: block;
    margin: 2em auto;
}

#content table img {
    margin: 0;
}

#content ol, #content ul {
    margin: var(--spacing-s) 0;
    padding: 0 0 0 var(--spacing-l);
}

#content ol ol, #content ol ul, #content ul ul, #content ul ol {
    margin: 0;
}

#content summary {
    padding: 1em 0;
    border-top: 1px solid var(--green);
    border-bottom: 1px solid var(--green);
}

#content summary:hover {
    cursor: pointer;
}

#content hr {
    border-top: 1px solid var(--green);
    border-right: none;
    border-bottom: none;
    border-left: none;
    margin: var(--spacing-l) 0;
}

/* BREAKPOINTS */
@media screen and (max-width: 800px) {
    body {
        font-size: 14px;
        padding: 0 10px 20px 10px;
    }

    td, th {
        flex: 1;
        min-height: 5em;
        padding: var(--spacing-s);
        min-width: 50vw;
    }

    .about p:not(:first-of-type) {
        display: none;
    }

    table {
        width: 100vw;
        display: block;
        overflow-x: scroll;
    }

    #content table {
        width: calc(100% + var(--spacing-s) + 10px);
    }

    #tableOfContentsLeft {
        display: none;
    }

    #cover {
        left: -10px;
    }

    #content {
        display: block;
        margin: auto;
        width: 100%;
        padding: 0 var(--spacing-s);
    }

    nav h1, .fakeNav h1 {
        font-size: 2.75em;
    }

    .smallHheading {
        font-size: 1.5em !important;
        -webkit-text-stroke-width: 0;
        -webkit-text-stroke-color: rgba(0,0,0,0);
    }

    #content h1 {
        font-size: 2.75em;
    }

    #content h2 {
        font-size: 2em;
    }

    #content h3#tableofcontents {
        display: block !important;
    }

    #content h3 ~ ol {
        display: block !important;
    }
}

